0188: GFMPW-1 Finalisation plan for today

--- a/0187-2023-12-09.md
+++ b/0187-2023-12-09.md
@@ -42,6 +42,7 @@
 
 | `la_data_in[]` | Mux control signal input | Registering                    |
 |---------------:|--------------------------|--------------------------------|
+|             48 | `i_mux_io5_reset_enb`    | 2x `mux_conf_clk` rising edges |
 |             49 | `i_mux_sel[0]`           | 2x `mux_conf_clk` rising edges |
 |             50 | `i_mux_sel[1]`           | 2x `mux_conf_clk` rising edges |
 |             51 | `i_mux_sel[2]`           | 2x `mux_conf_clk` rising edges |
@@ -77,10 +78,11 @@
 *   The actual internal mux control registers are:
     *   `mux_sel[3:0]`: 1-of-16, select the active design (i.e. the single design that is connected to chip outputs). Note that only IDs 0..7 are for selecting user designs. The others 8..15 are for different mux tests and proof-of-life logic.
     *   `mux_sys_reset_enb`: 0=enable (wb_rst_i will reset all designs); 1=disable (wb_rst_i is detached from all designs).
+    *   `mux_io5_reset_enb`: 0=enable (`io_in[5]` i.e. GPIO[5] in will reset all designs); 1=disable (GPIO[5] can be used normally by SoC, etc).
     *   `mux_auto_reset_enb`: 0=enable (unselected designs are held in reset); 1=disable (unselected designs can be free-running).
 
 Notes:
-*   Put `mux_conf_clk` on LA[63] so it has shortest path (fastest slew), then make all the others part of LA[62:49], plugged into RHS of mux. This allows Pawel and Anton to use LA bank 0 (shared?) (perhaps [23:8] nearest the middle, for a total of 16) for their design signals, and reserve LA blank 1 for system stuff... simplifies firmware.
+*   Put `mux_conf_clk` on LA[63] so it has shortest path (fastest slew), then make all the others part of LA[62:48], plugged into RHS of mux. This allows Pawel and Anton to use LA bank 0 (shared?) (perhaps [23:8] nearest the middle, for a total of 16) for their design signals, and reserve LA blank 1 for system stuff... simplifies firmware.
 *   A future design could modify the mux to use SPI, such that it only requires a small number of pins, and more-naturally gets 'glitch tolerance'... since it would be an 8-bit load before it is considered valid, and an aborted load (i.e. `/CS` being released early) would be discarded.
 *   Need to provide example firmware.
 *   By default should reset lines be active-LOW? i.e. assuming the LAs are all low after reset, is this a safer way to ensure NO designs are running at power-on (and hence we have maximum stability for the SoC)?
