--- a/tips/2312B.md
+++ b/tips/2312B.md
@@ -4,3 +4,5 @@
 *   Check all logs and warnings, inc. deep yosys stuff.
 *   Try to find any examples of disconnected pins/nets. Deliberately feed an error in to see how to find it?
 *   Go thru the same checks I did for EW.
+*   Put in all the SPDX stuff.
+*   Zoom the GDS and check that each macro actually has all expected pins connected.
