--- a/0188-2023-12-10.md
+++ b/0188-2023-12-10.md
@@ -36,10 +36,13 @@
 
 # Other things to do/try/check
 
+*   Search code for TODOs and SMELLs
+*   Check for a deliberate misnamed wire in UPW, and see if it (a) still hardens anyway; and (b) whether we can find a warning somewhere about that misnamed wire... and from there check for any others!
+*   It seems from Pawel's PR that you [don't need to include all source files in `includes.rtl.caravel_user_project`](https://github.com/algofoogle/algofoogle-multi-caravel/pull/1/files#diff-ae099be4441f3203d570d7b5fd5bb989320ca03332623948d91f33a7dec57a53)... instead [just the top wrapper](https://github.com/algofoogle/algofoogle-multi-caravel/pull/1/files#diff-20692e4c6399f9dca1a4be30033c4d0ab45f3f0a0c8e96371a0f5c93b65e249d).
 *   Review mux 'reg' concern. Compare [Tholin's `case`](https://repositories.efabless.com/tholin/tholin_multi_project/blob/main/f/verilog/rtl/Multiplexer/Multiplexer.v#_78) which also uses reg, but it should behave as a wire anyway because of sensitivity to `*` and no `<=` (i.e. no non-blocking assignment).
 *   Note that when I hardened the mux with `wb_clk_i` as CLOCK_PORT it seemed to give a different layout maybe with more buffers, but I could be wrong: That param should only be used for STA?
 *   Nudge TRZFs slightly left or right (30~40um) to avoid vertical PDN collisions. Not essential, but might help improve stability.
-*   External reset option for mux. Maybe make IO[5] a USER_INPUT by default in `user_defaults` so we can always use it as a reset unless otherwise configured by firmware.
+*   External reset option for mux. Maybe make IO[5] a USER_INPUT by default in `user_defines` so we can always use it as a reset unless otherwise configured by firmware.
 *   Could change mux registers to be clocked on wb_clk_i and just gated on mux_conf_clk??
 *   Hold, Slack, Cap, Slew margins.
 *   Flip Uri's macro
@@ -73,5 +76,5 @@
 *   Obstruction layers can be used to block out stuff that's still coming.
 *   Matt might have time to try formal verification assertions of the mux.
 *   Pawel has provided IO mapping: https://github.com/embelon/gf180-wb-hyperram/blob/main/verilog/rtl/wrapped_wb_hyperram.v (this is from GFMPW0, but Pawel will do the same for GFMPW1?)
-*   Should some designs (esp. Pawel's) take their inputs directly and skip the mux, if they're close enough?
+*   Should some designs (esp. Pawel's) take their inputs directly and skip the mux, if they're close enough? Pawel's is a prime example.
 *   PR from Pawel to provide latest design: https://github.com/algofoogle/algofoogle-multi-caravel/pull/1
