--- a/0188-2023-12-10.md
+++ b/0188-2023-12-10.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0187**-2023-12-09.md](./0187-2023-12-09.md) | *Next journal TBA* |
+| [**0187**-2023-12-09.md](./0187-2023-12-09.md) | [**0189**-2023-12-11.md](./0189-2023-12-11.md) |
 
 # GFMPW-1 Finalisation plan for today
 
@@ -36,6 +36,7 @@
 
 # Other things to do/try/check
 
+*   Bring in Uri's README, Diego's description, and link to respective docs/repos.
 *   Search code for TODOs and SMELLs
 *   Check for a deliberate misnamed wire in UPW, and see if it (a) still hardens anyway; and (b) whether we can find a warning somewhere about that misnamed wire... and from there check for any others!
 *   It seems from Pawel's PR that you [don't need to include all source files in `includes.rtl.caravel_user_project`](https://github.com/algofoogle/algofoogle-multi-caravel/pull/1/files#diff-ae099be4441f3203d570d7b5fd5bb989320ca03332623948d91f33a7dec57a53)... instead [just the top wrapper](https://github.com/algofoogle/algofoogle-multi-caravel/pull/1/files#diff-20692e4c6399f9dca1a4be30033c4d0ab45f3f0a0c8e96371a0f5c93b65e249d).
