Minor updates for 0190

--- a/0190-2024-01-17.md
+++ b/0190-2024-01-17.md
@@ -18,7 +18,7 @@ Board design is informed by the [RP2040 hardware design guide](https://datasheet
 
 ![RP2040 assembled PCB design/render](./i/0190-rp2040-pcb.jpg)
 
-The board is a little untidy but hopefully electrically valid.
+The board is a little untidy but hopefully electrically valid. Some of the untidiness is because this is just a test anyway, and I also wanted to try out a few things to see what would happenw ith JLCPCB.
 
 Reminders about some things that I needed to do:
 *   While JLCPCB's parts business is LCSC.com, you need to use https://jlcpcb.com/parts to search for parts that are actually available for the assembly service.
@@ -33,3 +33,8 @@ Reminders about some things that I needed to do:
 *   I had an issue with some footprints using 3D models that were outdated: They referred to KiCad 6 paths, and the respective model files no longer existed. I found alternatives for 2 of the 3 parts affected.
 *   Using the Schematic Editor's table (bulk edit) for component properties sped up a lot of stuff.
 
+This is the JLCPCB guide I'll try using to generate the BOM and placement (Centroid) files: [How to generate the BOM and Centroid file from KiCAD](https://jlcpcb.com/help/article/81-How-to-generate-the-BOM-and-Centroid-file-from-KiCAD)
+
+My guide:
+*   I've already added the `LCSC` property for all parts that require assembly.
+*   ...TBC...
