0190: Starting JLC PCBA test with reference RP2040 design

--- a/0190-2024-01-17.md
+++ b/0190-2024-01-17.md
@@ -33,8 +33,18 @@ Reminders about some things that I needed to do:
 *   I had an issue with some footprints using 3D models that were outdated: They referred to KiCad 6 paths, and the respective model files no longer existed. I found alternatives for 2 of the 3 parts affected.
 *   Using the Schematic Editor's table (bulk edit) for component properties sped up a lot of stuff.
 
-This is the JLCPCB guide I'll try using to generate the BOM and placement (Centroid) files: [How to generate the BOM and Centroid file from KiCAD](https://jlcpcb.com/help/article/81-How-to-generate-the-BOM-and-Centroid-file-from-KiCAD)
+This is the JLCPCB guide I'll try using to generate the BOM and placement (CPL aka Centroid) files: [How to generate the BOM and Centroid file from KiCAD](https://jlcpcb.com/help/article/81-How-to-generate-the-BOM-and-Centroid-file-from-KiCAD)
 
 My guide:
 *   I've already added the `LCSC` property for all parts that require assembly.
+*   [Add tooling holes](https://jlcpcb.com/help/article/47-How-to-add-tooling-holes-for-PCB-assembly-order)
 *   ...TBC...
+
+Things to beware:
+*   Proper footprint matching
+*   Confirm all components to place
+*   Correct orientation esp. with 'dot'
+*   Diode orientation: "DFM ANALYSE" looking for `+/-` markings and IC dots? JLC [recommend](https://jlcpcb.com/help/article/39-pcb-assembly-faqs-part-2#:~:text=How%20do%20we%20judge%20the%20polarity%20for%20the%20components) silkscreen markings, but are these irrelevant given a CPL?
+*   Check [minimum component spacing](https://jlcpcb.com/help/article/41-SMD-Components-Minimum-Spacing)
+*   Check coupons!
+*   JLCPCB [list of basic parts and extended parts that do not incur extra cost in 'Economy' assembly service](https://jlcpcb.com/parts/basic_parts)
