--- a/0049-2020-08-02.md
+++ b/0049-2020-08-02.md
@@ -1,5 +1,10 @@
 # 2 Aug 2020
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0048**-2020-07-29.md](./0048-2020-07-29.md) | [**0050**-2020-08-03.md](./0050-2020-08-03.md) |
+
+
 ## ROM-based tile map VGA renderer
 
 Over the last few days I ditched `t09c` and instead started [`t09d`](https://github.com/algofoogle/sandpit/tree/master/fpga/XC9572XL/test09/t09d).
